--- a/app/src/main/res/layout/activity_artikel_detail.xml
+++ b/app/src/main/res/layout/activity_artikel_detail.xml
@@ -14,7 +14,7 @@
 
         <LinearLayout
             android:layout_height="match_parent"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:gravity="center"
             android:orientation="vertical">
 
